@@ -5,6 +5,8 @@
  *
  * This file contains non-sense code for the sole purpose of testing the docs.
  *
+ * As described in http://bugzilla.gnome.org/show_bug.cgi?id=457077 it
+ * returns nothing.
  */
 
 #include <glib.h>
@@ -40,6 +42,16 @@ void bug_141869_b (signed pid) {
  */
 void bug_379466 (int
   pid) {
+}
+
+
+/**
+ * bug_419997:
+ * @pid: arg
+ *
+ * http://bugzilla.gnome.org/show_bug.cgi?id=419997
+ */
+void bug_419997 (int const_values) {
 }
 
 
