@@ -10,6 +10,8 @@ void bug_141869_b (signed pid);
 
 void bug_379466 (int pid);
 
+void bug_419997 (int const_values);
+
 void bug_445693 (unsigned long pid);
 
 #endif // GTKDOC_TESTER_H
