@@ -1,3 +1,12 @@
+2007-07-18  Stefan Kost  <ensonic@users.sf.net>
+
+	* tests/bugs/docs/tester-sections.txt:
+	* tests/bugs/src/tester.c: (bug_419997):
+	* tests/bugs/src/tester.h:
+	* tests/gobject/src/tester.c: (gtkdoc_tester_class_init):
+	* tests/gobject/src/tester.h:
+	  Add more test cases.
+
 2007-07-17  Stefan Kost  <ensonic@users.sf.net>
 
 	* tests/bugs/docs/Makefile.in:
